platform/kubernetes/base/loki/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: shopsphere-monitoring
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: loki
    app.kubernetes.io/component: log-server
  ports:
    - name: http
      port: 3100
      targetPort: http
      protocol: TCP
    - name: grpc
      port: 9095
      targetPort: grpc
      protocol: TCP
